# mabos-workbench

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  next.config.mjs  package.json
.claude/commands/: code_analysis.md  context_prime.md  vidgen_ultra_diff_review.md
.cursor/: mcp.json
.cursor/rules/: codebase-xray.mdc  communication-protocol.mdc
.github/workflows/: ci.yml
app/: Model.md  globals.css  layout.tsx  page.tsx
app/agents/: OnboardingAgent.ts
app/api/generate-business-model/: route.ts
app/components/: AgentSimulator.tsx  ArchitecturalView.tsx  BusinessModelGenerator.tsx  DiagramEditor.tsx  MASModelingTool.tsx  ModelTransformer.tsx  OnboardingAgent.tsx  OnboardingExperience.tsx  VersionControlPanel.tsx  Workbench.tsx
app/components/CustomEdges/: AccessEdge.tsx  AggregationEdge.tsx  AssignmentEdge.tsx  AssociationEdge.tsx  CompositionEdge.tsx  DependencyEdge.tsx  GeneralizationEdge.tsx  InfluenceEdge.tsx  InheritanceEdge.tsx  MessageEdge.tsx  RealizationEdge.tsx  RelationshipEdge.tsx  ServingEdge.tsx  SpecializationEdge.tsx  TriggeringEdge.tsx
app/components/CustomNodes/: AOMNode.tsx  AOPNNode.tsx  ActionNode.tsx  AgentNode.tsx  ApplicationElements.tsx  BMCNode.tsx  BMMNode.tsx  BPMNNode.tsx  BeliefNode.tsx  BusinessActorNode.tsx  BusinessLayerElements.tsx  CompositeElements.tsx  Flow.tsx  GoalNode.tsx  ImplementationElements.tsx  MotivationElements.tsx  OrganizationNode.tsx  PhysicalElements.tsx  PlanNode.tsx  ResourceNode.tsx  StrategyElements.tsx  TechnologyElements.tsx  UMLNode.tsx
app/components/onboarding/: BusinessModelCanvas.tsx  BusinessOverview.tsx  FinalStep.tsx  GoalsConstraints.tsx  ModelSelection.tsx  OnboardingProgress.tsx  WelcomeScreen.tsx
app/lib/: api-client.ts
app/pages/: architectural.tsx  business_development.tsx  communication.tsx  environmental.tsx  intentional.tsx  operations.tsx  performance_measurement.tsx
app/services/: api.ts  onboarding.ts
app/types/: models.d.ts
backend/: pyproject.toml  requirements-core.txt  requirements-minimal.txt  requirements.txt  test_db_connections.py  test_elasticsearch_integration.py  test_elasticsearch_simple.py  test_redis_integration.py  test_sbvr_integration.py  test_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  database.py
backend/app/models/: database_schema.sql  elasticsearch_manager.py  migrations.py  neo4j_manager.py  redis_manager.py
backend/app/tests/unit/: test_health.py
backend/config/: redis.conf  sentinel.conf
components/: BusinessModelGenerator.tsx  DiagramEditor.tsx  MASModelingTool.tsx  ModelTransformation.tsx  OnboardingExperience.tsx  Workbench.tsx
docs/: database-architecture-plan.md  svbr_ontolog.xml
docs/prompt/: architecture-specification-documentation-prompt.md  new-codebase-prompt.md  software-requirement-specification-prompt.md  uxdrd-prompt.md  write-report-prompt.md
docs/research/: agentdock-mabos-analysis.json  agentdock-mabos-codexray-report.md  comparative_analysis-report.md  dify-mabos-analysis.json  dify-mabos-codexray-report.md  kestra-kb-analysis.json  kestra-kb-codexray-report.md  mabos-standalone-analysis.json  mabos-standalone-codexray-report.md  multi-codebase-comparative-analysis.md  suna-analysis.json  suna-codexray-report.md
docs/specs/: backend-dependencies.md  business-requirements-document.md  frontend-dependencies.md  implementation-gaps-resolved.md  new-mabos-project-specification.md  product-requirements-document.md  software-requirements-specification.md  technical-architectural-requirements-document.md  user-experience-design-requirements-document.md
frontend/: jest.config.js  next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
infrastructure/neo4j/init/: 001-bdi-ontology.cypher  002-enterprise-ontology.cypher
scripts/: prd.txt  task-complexity-report.json
scripts/setup/: install-dependencies.sh
styles/: globals.css
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  tasks.json
tests/performance/: load-test.js
tests/security/: vulnerability-scan.js
